--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.14.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
