--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,10 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
     "axios": "^1.10.0",
     "chart.js": "^4.4.0",
     "formik": "^2.4.6",
